--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.60.0",
         "sass-loader": "^13.2.1",
+        "sha256": "^0.2.0",
         "text-contents-vue-components": "^1.0.8",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
