--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "gurulo-lofasz-vue-components": "^1.0.2",
         "helper-vue-components": "^1.0.12",
         "jquery": "^3.6.4",
+        "jquery-ui": "^1.13.2",
+        "jquery-ui-bundle": "^1.12.1-migrate",
         "js-helper-methods": "^1.1.3",
         "just-clone": "^6.2.0",
         "node-sass": "^8.0.0",
