new package.json

--- a/package.json
+++ b/package.json
@@ -16,21 +16,22 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
-        "@popperjs/core": "^2.11.7",
-        "agency-landing-page-vue-components": "^1.0.6",
-        "blue-admin-vue-components": "^1.0.1",
-        "bootstrap": "5.1",
-        "bootstrap-select": "^1.13.18",
         "description-vue-components": "^1.0.5",
-        "dynamic-web-vue-components": "^1.0.3",
-        "grayscale-landing-page-vue-components": "^1.0.6",
-        "gurulo-lofasz-vue-components": "^1.0.2",
+        "ecom-vue-components": "^1.0.2",
         "helper-vue-components": "^1.0.12",
+        "text-contents-vue-components": "^1.0.8",
+        "js-helper-methods": "^1.1.3",
+        "@popperjs/core": "^2.11.7",
+        "bootstrap": "4.6.1",
+        "bootstrap-css-only": "^4.4.1",
+        "bootstrap-select": "^1.13.18",
+        "bootstrap-vue": "^2.23.1",
         "jquery": "^3.6.4",
         "jquery-ui": "^1.13.2",
         "jquery-ui-bundle": "^1.12.1-migrate",
-        "js-helper-methods": "^1.1.3",
         "just-clone": "^6.2.0",
+        "mdbvue": "^6.7.4",
+        "multi-range-slider-vue": "^1.1.4",
         "node-sass": "^8.0.0",
         "path": "^0.12.7",
         "popper.js": "^1.16.1",
@@ -40,11 +41,9 @@
         "sass": "^1.60.0",
         "sass-loader": "^13.2.1",
         "sha256": "^0.2.0",
-        "text-contents-vue-components": "^1.0.8",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-slider-component": "^3.2.24",
-        "vue-template-compiler": "^2.6.12",
-        "web-page-designer-vue-components": "^1.0.1"
+        "vue-template-compiler": "^2.6.12"
     }
 }
